tests/ui/parser/bad-interpolated-block.stderr
error: cannot use a `block` macro fragment here
  --> $DIR/bad-interpolated-block.rs:5:15
   |
LL |         'lab: $b;
   |         ------^^
   |         |
   |         the `block` fragment is within this context
...
LL |     m!({});
   |     ------ in this macro invocation
   |
   = note: this error originates in the macro `m` (in Nightly builds, run with -Z macro-backtrace for more info)

error: cannot use a `block` macro fragment here
  --> $DIR/bad-interpolated-block.rs:6:16
   |
LL |         unsafe $b;
   |         -------^^
   |         |
   |         the `block` fragment is within this context
...
LL |     m!({});
   |     ------ in this macro invocation
   |
   = note: this error originates in the macro `m` (in Nightly builds, run with -Z macro-backtrace for more info)

error: cannot use a `block` macro fragment here
  --> $DIR/bad-interpolated-block.rs:7:23
   |
LL |         |x: u8| -> () $b;
   |                       ^^ the `block` fragment is within this context
...
LL |     m!({});
   |     ------ in this macro invocation
   |
   = note: this error originates in the macro `m` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 3 previous errors

